# evaluating-deeplight-transfer

./: .gitignore  README.md  environment.yml  pyproject.toml  setup.py
deeplight/: __init__.py
deeplight/data/: __init__.py  io.py  preprocessing.py
deeplight/three/: __init__.py  _architecture.py  _fit.py  _lrp.py  model.py
deeplight/two/: _architecture.py  _dropout.py  _fit.py  _lstm.py  model.py
deeplight/two/pretrained_model/: model-2D_DeepLight_desc-pretrained_model.npy
examples/: decode.py  download.py  interpret.py  preprocess.py  train.py
hcprep/convert/: convert.py
hcprep/data/: __init__.py  _utils.py  data.py
hcprep/download/: _utils.py  download.py
hcprep/info/: info.py
hcprep/info/subject_ids/: task-EMOTION_subjects.npy  task-GAMBLING_subjects.npy  task-LANGUAGE_subjects.npy  task-MOTOR_subjects.npy  task-SOCIAL_subjects.npy  task-WM_subjects.npy
hcprep/paths/: __init__.py  paths.py
hcprep/preprocess/: preprocess.py
scripts/: decode.py  interpret.py  preprocess.py
src/: setup.py
src/deeplight/: __init__.py
src/deeplight/data/: preprocessing.py
src/deeplight/three/: _fit.py  model.py
src/deeplight/two/: _architecture.py  model.py
src/hcprep/: __init__.py
src/hcprep/convert/: __init__.py
src/hcprep/download/: __init__.py  _utils.py  download.py
src/hcprep/info/: __init__.py  info.py
src/hcprep/info/subject_ids/: task-RELATIONAL_subjects.npy
src/hcprep/paths/: paths.py
src/hcprep/preprocess/: __init__.py
src/modules/: __init__.py  elu.py  sequential.py  utils.py
